--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,8 @@ dependencies {
 
 	//db
 	runtimeOnly 'com.h2database:h2'
-	implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.0'
+	//implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.0'
+	implementation 'mysql:mysql-connector-java:8.0.23'
 
 	//test
 	testCompileOnly 'org.projectlombok:lombok'
